<resources>
    <string name="app_name">Quizizz</string>
    <string name="menu_score">High Score</string>

    <string name="start_quiz">Start Quiz</string>
    <string name="result">Result</string>
    <string name="score">Score  :</string>
    <string name="high_score">High Score  :</string>
    <string name="attempt">Attempted Questions</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>

    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="noQ">Question Count</string>
</resources>