<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartQuizActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintStart_toStartOf="@+id/category" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintStart_toStartOf="@+id/category" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/no_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/noQ"
        app:layout_constraintBottom_toTopOf="@+id/no_questions"
        app:layout_constraintStart_toStartOf="@+id/category" />

    <Spinner
        android:id="@+id/no_questions"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <Button
        android:id="@+id/start_quiz"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:text="@string/start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/whatapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_quiz" />

</androidx.constraintlayout.widget.ConstraintLayout>